# InfectedPBM

./: .gitignore  Pipfile  README.md  o3_mini_distortions.md  o3_mini_plan.md  plot_entropy_scheduler.py  pyproject.toml  requirements.txt
common/: __init__.py  log.py  registry_container.py
config/: config.yaml  lvl1_dllm.yaml  lvl1_vqgan.yaml  lvl1_vqvae.yaml  lvl1_vqvae_random_long.yaml  lvl1_vqvae_ripl.yaml  lvl1_vqvae_small.yaml  lvl2_vqvae.yaml  mamba.yaml  ripl.yaml
config/data/: lvl1_latent_dllm.yaml  lvl1_long.yaml  lvl1_vqvae.yaml
config/dataset/: long.yaml  music_slices.yaml  tokenized.yaml
config/learning/: long.yaml  mamba.yaml  ml_vqvae.yaml  ripl.yaml  standard.yaml  vqgan.yaml
config/loss/: dllm.yaml  ml_vqgan.yaml  ml_vqvae.yaml  ml_vqvae_long.yaml  none.yaml  ripl.yaml  ripl_vqvae.yaml  token_pred_vqvae.yaml
loaders/: __init__.py  base.py  data_modules.py  datasets.py
loss/: __init__.py  aggregators.py  component_base.py
models/: __init__.py  autoregressor_module.py  base.py  mel_spec_converters.py  music_module.py  pipeline.py  ripl_module.py  vq_codebook.py
notebooks/: run_chaos_hydra.ipynb  run_lvl1_dllm.ipynb  run_network.ipynb  run_tokenizer.ipynb  test_tokenized_sequence.ipynb
scripts/: gen_test_sounds.py  pull_last_weights.py  test.py  train.py  train_new.py  train_pretrained_seq.py  train_ripl.py  train_ripple.py
tests/: conftest.py
utils/: activation_funcs.py  config.py  containers.py  learning.py  logger.py  positional_encoding.py  trainer.py  transform_func.py  transform_funcs.py  waveform_tokenization.py
(+225 files in other folders)
