[project]
name = "infectedpbm"
version = "0.1.0"
description = "Music generation project that uses multi-level VQVAEs for encoding/decoding and autoregressive generation"
authors = [
    {name = "Vladimir Tchuiev",email = "rmcf126@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "tensorboard (>=2.18.0,<3.0.0)",
    "mamba-ssm (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

